<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/cinema_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/design_name_cinema"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/cinema_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/design_misc_address" />

    <TextView
        android:id="@+id/cinema_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/design_url_cinema" />

    <TextView
        android:id="@+id/cinema_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:text="@string/design_misc_phone" />
</LinearLayout>