<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <include
        android:id="@+id/layout_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/common_header" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/layout_footer"
        android:layout_below="@+id/layout_header"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/film_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design_name_film"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/film_classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/design_misc_classification" />

        <TextView
            android:id="@+id/film_advisory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/design_misc_advisory" />

        <TextView
            android:id="@+id/film_attributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/design_attributes_film" />

        <TextView
            android:id="@+id/film_url_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/design_url_film_details" />

        <TextView
            android:id="@+id/film_url_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/design_url_film_poster" />

        <TextView
            android:id="@+id/film_url_still"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/design_url_film_still" />
    </LinearLayout>

    <include
        android:id="@+id/layout_footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/common_footer" />

</RelativeLayout>